--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
         <li>Página de Inicio emocional e informativa</li>
         <li>Sección "Nosotros" con enfoque humano</li>
         <li>Listado de Servicios con iconografía moderna</li>
-        <li>Formulario de contacto y reserva</li>
+        <li>Formulario de contacto</li>
+        <li>Boton Directo de whatsapp</li>
+
       </ul>
     </section>
     <section class="section">
